feat: add usefull script
